add appel offre list

--- a/templates/app/home.twig
+++ b/templates/app/home.twig
@@ -1,9 +1,6 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-
-<div class="ui container">
-    <h1 class="ui center aligned header">Hello World!</h1>
-</div>
+<button><a href='addAppelOffre'> addAppelOffre </a></button>
 
 {% endblock %}
