adding offre solo

--- a/templates/appelOffre/addAppelOffre.twig
+++ b/templates/appelOffre/addAppelOffre.twig
@@ -41,7 +41,7 @@
     </div>
     <div class="field">
         <div class="ui left icon input">
-            <input type="text" name="budget" placeholder="Budget">
+            <input type="number" name="budget" placeholder="Budget">
         </div>
     </div>
     <div class="field">
