--- a/templates/app/_navbar.twig
+++ b/templates/app/_navbar.twig
@@ -1,8 +1,14 @@
 <nav class="ui borderless top fixed menu">
     <a href="{{ path_for('home') }}" class="header item">Slim Skeleton</a>
     <div class="right menu">
+        <div class="item">
+            <a href="{{ path_for('showListAppelOffre') }}" class="ui teal circular button">Liste d'offres</a>
+        </div>
         {% if auth.check() %}
             <div class="header item">{{ auth.user.username }}</div>
+            <div class="item">
+                <a href="{{ path_for('user', { 'id': auth.check().id  }) }}" class="ui teal circular button">Perso</a>
+            </div>
             <div class="item">
                 <a href="{{ path_for('logout') }}" class="ui teal circular button">Logout</a>
             </div>
