--- a/templates/app/_navbar.twig
+++ b/templates/app/_navbar.twig
@@ -1,5 +1,5 @@
 <nav class="ui borderless top fixed menu">
-    <a href="{{ path_for('home') }}" class="header item">Slim Skeleton</a>
+    <a href="{{ path_for('home') }}" class="header item">MAEO</a>
     <div class="right menu">
         <div class="item">
             <a href="{{ path_for('showListAppelOffre') }}" class="ui teal circular button">Liste d'offres</a>
