--- a/templates/appelOffre/index.twig
+++ b/templates/appelOffre/index.twig
@@ -3,14 +3,14 @@
 {% block body %}
   <a href='addAppelOffre' class="ui fluid large teal button" >Ajouter Appel d'offre</a>
 
-<div>
+<div class="listOffre">
 
 {% for appelOffre in list %}
-    <div>
+    <div class="appelOffre">
 
       <h1>{{appelOffre.intitule}}</h1>
-      <h3>{{appelOffre.commanditaire}}</h3>
-      <h3>{{appelOffre.datelimitecandidature}}</h3>
+      <h3>Commanditaire : </br>{{appelOffre.commanditaire}}</h3>
+      <h3>Date limite de candidature : </br>{{appelOffre.datelimitecandidature}}</h3>
 
       <a href="{{ path_for('showAppelOffre', { 'id': appelOffre.id  }) }}" class="ui fluid large teal button" >Voir offre</a>
 
